# Currency_rate_extractor

./: .gitignore  Pipfile  README.md  constants.py  currency_rates.db  database_commands.sh  exchange_rates.json  exchange_rates.py  pyproject.toml  requirements.txt  test_api.ipynb  to_do.md  twitter_etl.py
.github/workflows/: actions.yml
data/: currency_rates.db
notebooks/: exchange_rates_api_test.ipynb  plotly_way.ipynb
src/: clean_data.py  connect_with_private_key.py  constants.py  exchange_rate_test.py  exchange_rates.py  exchange_rates_dag.py  extract_and_load.py  queries.py  test_import.py  test_post.py  test_vm.py  transform_and_plot.py  utils.py  view_data.py
src/currency_rate_extractor/: constants.py  custom_logging.py  entrypoint.py  extract_and_load.py  transform_and_plot.py  view_data.py
tests/: conftest.py  health_check.py
tests/unit/: api_health.py
